Fix dark mode button color

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ button {
 
     button {
         color: white;
-        background-color: #444;
+        background-color: #555;
     }
 
     #picker {
